--- a/app/style.css
+++ b/app/style.css
@@ -197,3 +197,8 @@ h1 {
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+#t{
+    text-rendering: optimizeLegibility;
+    -webkit-text-stroke: #212529 2px;
+}
